# ege-uni-istatistik-ve-veri-bilimi-toplulugu

./: .gitignore  README.md
Gun_01_Temel_Python/: README.md
Gun_01_Temel_Python/notebooks/: 01_static_analysis.py  02_interactive_web.py  03_folium_map.py  04_streamlit_app.py  05_gradio_ml.py  README.md  pyproject.toml  requirements.txt
Gun_02_Istatistik_Temelleri/: README.md
Gun_03_Temel_Veri_On_Isleme/: README.md
Gun_03_Temel_Veri_On_Isleme/kaynaklar/: dataset.csv
Gun_03_Temel_Veri_On_Isleme/notebooks/: Temel_Veri_On_Isleme_Rehberi.ipynb  veri_onisleme_egitimi.ipynb
Gun_04_Uctan_Uca_Veri_Gorsellestirme/: README.md
Gun_04_Uctan_Uca_Veri_Gorsellestirme/notebooks/: uctan_uca_veri_gorsellestirme.ipynb
Gun_05_Power_BI/: EGE_UNI_EGITIM.pbix  README.md  notes.md
Gun_05_Power_BI/data/: ecommerce.db
Gun_06_Looker/: README.md
Gun_07_Regresyon_Modelleme/: README.md
Gun_08_Siniflandirma_Modelleme/: README.md
Gun_09_Baseline_Model/: README.md
