[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.5.1",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "bokeh>=3.8.2",
    "folium>=0.20.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "ruff>=0.14.14",
    "seaborn>=0.13.2",
    "streamlit>=1.53.1",
]
